<?xml version="1.0" encoding="UTF-8"?>
<project 
	xmlns="http://maven.apache.org/POM/4.0.0" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<name>CyBioFabric</name>	

	<properties>
		<bundle.symbolicName>org.systemsbiology.cyBioFabric</bundle.symbolicName>
		<bundle.namespace>org.systemsbiology.cyBioFabric</bundle.namespace>
		<cytoscape.api>3.4.0</cytoscape.api>
		<timestamp>${maven.build.timestamp}</timestamp>
		<project.version>0.0.1</project.version>
		<jogl.version>2.2.4</jogl.version>
	</properties>

	
	<groupId>org.systemsbiology.cyBioFabric</groupId>
	<artifactId>CyBioFabric</artifactId>
	<version>${project.version}</version>

	<modelVersion>4.0.0</modelVersion>
	<packaging>bundle</packaging>
	
	<!-- Links to the Cytoscape Maven repositories. -->
	<repositories>
		<repository>
			<id>cytoscape_snapshots</id>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
			<name>Cytoscape Snapshots</name>
			<url>http://code.cytoscape.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>cytoscape_releases</id>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
			<name>Cytoscape Releases</name>
			<url>http://code.cytoscape.org/nexus/content/repositories/releases/</url>
		</repository>
	</repositories>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
		        <filtering>true</filtering>
		        <includes>
		          	<include>**/buildinfo.props</include>
		        </includes>
			</resource>
			<resource>
		        <directory>src/main/resources</directory>
		        <filtering>false</filtering>
		        <excludes>
		          	<exclude>**/buildinfo.props</exclude>
		        </excludes>
	      	</resource>
		</resources>
		<!-- Cytoscape requires Java 1.8 -->
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<executions>
					<execution>
						<id>default-testCompile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
					<execution>
						<id>default-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<optimize>true</optimize>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<compilerArguments>
						<Xmaxwarns>10000</Xmaxwarns>
						<Xmaxerrs>10000</Xmaxerrs>
					</compilerArguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.7.1</version>
				<configuration>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
				</configuration>
			</plugin>
			<!-- Generates the OSGi metadata based on the osgi.bnd file. -->
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>2.3.7</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
						<Bundle-Version>${project.version}</Bundle-Version>
						<Export-Package>${bundle.namespace}</Export-Package>
						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
						<Bundle-Activator>${bundle.namespace}.internal.CyActivator</Bundle-Activator>
						
						<Import-Package>!org.eclipse.swt.*,!sun.misc,*</Import-Package>
						<Embed-Dependency>*;scope=!provided|test;groupId=!org.cytoscape</Embed-Dependency>
						<Embed-Transitive>true</Embed-Transitive>
					</instructions>
				</configuration>
			</plugin>
		</plugins>
	</build>

	

	<!-- Dependencies needed to compile this project. -->
	<dependencies>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.core</artifactId>
			<version>4.2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>event-api</artifactId>
			<version>${cytoscape.api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>model-api</artifactId>
			<version>${cytoscape.api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>presentation-api</artifactId>
			<version>${cytoscape.api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>core-task-api</artifactId>
			<version>${cytoscape.api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>swing-application-api</artifactId>
			<version>${cytoscape.api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>swing-util-api</artifactId>
			<version>${cytoscape.api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>vizmap-gui-api</artifactId>
			<version>${cytoscape.api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>work-swing-api</artifactId>
			<version>${cytoscape.api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>command-executor-api</artifactId>
			<version>${cytoscape.api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>session-api</artifactId>
			<version>${cytoscape.api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>service-api</artifactId>
			<version>${cytoscape.api}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
		    <groupId>org.cytoscape</groupId>
		    <artifactId>layout-api</artifactId>
		    <version>${cytoscape.api}</version>	
		    <scope>provided</scope>	   
		</dependency>


		<!-- 3rd party library -->
		<!-- https://mvnrepository.com/artifact/org.jogamp.jogl/jogl-all -->					  
		<dependency>
		     <groupId>com.google.guava</groupId>
		     <artifactId>guava</artifactId>
	     	<version>19.0</version>
	   	</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.ops4j.pax.logging</groupId>
			<artifactId>pax-logging-api</artifactId>
			<version>1.5.2</version>
			<scope>provided</scope>
		</dependency>
		
		<!-- BioFabric dependency-->
		<!-- http://stackoverflow.com/questions/4955635/how-to-add-local-jar-files-in-maven-project/22300875#22300875-->
		
		
	</dependencies>

</project>
